[gd_scene load_steps=10 format=3 uid="uid://chjdbc8r5p4jh"]

[ext_resource type="Script" path="res://Room.gd" id="1_cq6xx"]
[ext_resource type="Texture2D" uid="uid://tqf61qesen6x" path="res://assets/table/table.png" id="2_o6c2w"]
[ext_resource type="Theme" uid="uid://dfhp5k8srrvjm" path="res://nodes/Room.tres" id="3_nxo1i"]
[ext_resource type="PackedScene" uid="uid://cikxyaxg1jgti" path="res://nodes/DeckCards.tscn" id="3_xp2h7"]
[ext_resource type="PackedScene" uid="uid://cw8ivqxcvkxyk" path="res://nodes/CardsToDeal.tscn" id="4_7iq34"]
[ext_resource type="Script" path="res://nodes/CardsOnDeck.gd" id="5_apm0q"]

[sub_resource type="SystemFont" id="SystemFont_p4rry"]
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_4k625"]

[sub_resource type="Theme" id="Theme_57vci"]
default_font = SubResource("SystemFont_4k625")
default_font_size = 36

[node name="Room" type="Node"]
script = ExtResource("1_cq6xx")
metadata/_edit_vertical_guides_ = [960.0]
metadata/_edit_horizontal_guides_ = [680.0]

[node name="Table" type="Sprite2D" parent="."]
texture = ExtResource("2_o6c2w")
centered = false

[node name="Button" type="Button" parent="."]
offset_left = 1728.0
offset_top = 40.0
offset_right = 1896.0
offset_bottom = 104.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_p4rry")
theme_override_font_sizes/font_size = 30
text = "Exit Room"

[node name="Seats" type="Node2D" parent="."]

[node name="Seat1" type="Node2D" parent="Seats"]
position = Vector2(704, 720)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat1"]
layout_direction = 2
offset_left = -12.0
offset_top = 51.0
offset_right = 318.0
offset_bottom = 303.0
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat1"]
offset_left = 105.0
offset_top = -115.0
offset_right = 181.0
offset_bottom = -61.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat1"]
offset_left = 105.0
offset_right = 241.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 30

[node name="Nickname" type="Label" parent="Seats/Seat1"]
offset_left = 106.0
offset_top = -36.0
offset_right = 182.0
offset_bottom = 8.0
theme = ExtResource("3_nxo1i")
theme_override_font_sizes/font_size = 28

[node name="OptionContainer" type="HBoxContainer" parent="Seats/Seat1"]
visible = false
custom_minimum_size = Vector2(60, 50)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 269.0
offset_top = 178.0
offset_right = 919.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_nxo1i")
text = "Check"

[node name="CallButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_nxo1i")
text = "Call"

[node name="BetButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
theme = ExtResource("3_nxo1i")
text = "Bet"

[node name="FoldButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_nxo1i")
text = "Fold"

[node name="RaiseButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_nxo1i")
text = "Raise"

[node name="All-InButton" type="Button" parent="Seats/Seat1/OptionContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_nxo1i")
text = "All-In"

[node name="Position" type="Label" parent="Seats/Seat1"]
offset_left = 102.0
offset_top = -74.0
offset_right = 171.0
offset_bottom = -45.0
theme = ExtResource("3_nxo1i")

[node name="TextEdit" type="LineEdit" parent="Seats/Seat1"]
visible = false
offset_left = 576.0
offset_top = 113.0
offset_right = 809.0
offset_bottom = 163.0
placeholder_text = "Raise To:"

[node name="Seat2" type="Node2D" parent="Seats"]
position = Vector2(192, 672)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat2"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.10352e-05
offset_top = 6.10352e-05
offset_right = 330.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat2"]
offset_left = 199.0
offset_top = -57.0
offset_right = 245.0
offset_bottom = -15.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat2"]
offset_left = 24.0
offset_top = -33.0
offset_right = 178.0
offset_bottom = 9.0
theme = ExtResource("3_nxo1i")

[node name="Nickname" type="Label" parent="Seats/Seat2"]
offset_left = 17.0
offset_top = -64.0
offset_right = 170.0
offset_bottom = -22.0
theme = ExtResource("3_nxo1i")

[node name="Position" type="Label" parent="Seats/Seat2"]
offset_left = 21.0
offset_top = -97.0
offset_right = 90.0
offset_bottom = -58.0
theme = ExtResource("3_nxo1i")

[node name="Seat3" type="Node2D" parent="Seats"]
position = Vector2(176, 224)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat3"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 45.0
offset_right = 327.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat3"]
offset_left = 292.0
offset_top = 78.0
offset_right = 338.0
offset_bottom = 120.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat3"]
offset_left = 78.0
offset_top = -22.0
offset_right = 142.0
offset_bottom = 20.0
theme = ExtResource("3_nxo1i")

[node name="Nickname" type="Label" parent="Seats/Seat3"]
offset_left = 80.0
offset_top = -53.0
offset_right = 233.0
offset_bottom = -11.0
theme = ExtResource("3_nxo1i")

[node name="Position" type="Label" parent="Seats/Seat3"]
offset_left = 80.0
offset_top = -82.0
offset_right = 149.0
offset_bottom = -40.0
theme = ExtResource("3_nxo1i")

[node name="Seat4" type="Node2D" parent="Seats"]
position = Vector2(832, 96)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat4"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 115.0
offset_right = 331.0
offset_bottom = 367.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat4"]
offset_left = -80.0
offset_top = 155.0
offset_right = -34.0
offset_bottom = 197.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat4"]
offset_left = 6.0
offset_top = 63.0
offset_right = 70.0
offset_bottom = 105.0
theme = ExtResource("3_nxo1i")

[node name="Nickname" type="Label" parent="Seats/Seat4"]
offset_left = 6.0
offset_top = 26.0
offset_right = 159.0
offset_bottom = 68.0
theme = ExtResource("3_nxo1i")

[node name="Position" type="Label" parent="Seats/Seat4"]
offset_left = 6.0
offset_top = -9.0
offset_right = 75.0
offset_bottom = 33.0
theme = ExtResource("3_nxo1i")

[node name="Seat5" type="Node2D" parent="Seats"]
position = Vector2(1480, 232)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat5"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00012207
offset_top = 6.10352e-05
offset_right = 330.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat5"]
offset_left = -91.0
offset_top = 50.0
offset_right = -45.0
offset_bottom = 92.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat5"]
offset_top = -48.0
offset_right = 64.0
offset_bottom = -6.0
theme = ExtResource("3_nxo1i")

[node name="Nickname" type="Label" parent="Seats/Seat5"]
offset_left = 2.0
offset_top = -86.0
offset_right = 155.0
offset_bottom = -44.0
theme = ExtResource("3_nxo1i")

[node name="Position" type="Label" parent="Seats/Seat5"]
offset_top = -124.0
offset_right = 69.0
offset_bottom = -82.0
theme = ExtResource("3_nxo1i")

[node name="Seat6" type="Node2D" parent="Seats"]
position = Vector2(1468, 677)

[node name="CardList" type="HBoxContainer" parent="Seats/Seat6"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -2.0
offset_right = 333.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Counter" type="Label" parent="Seats/Seat6"]
offset_left = -109.0
offset_top = 46.0
offset_right = -63.0
offset_bottom = 88.0
theme = ExtResource("3_nxo1i")

[node name="Points" type="Label" parent="Seats/Seat6"]
offset_left = 47.0
offset_top = -67.0
offset_right = 111.0
offset_bottom = -25.0
theme = ExtResource("3_nxo1i")

[node name="Nickname" type="Label" parent="Seats/Seat6"]
offset_left = 51.0
offset_top = -108.0
offset_right = 204.0
offset_bottom = -66.0
theme = ExtResource("3_nxo1i")

[node name="Position" type="Label" parent="Seats/Seat6"]
offset_left = 51.0
offset_top = -148.0
offset_right = 120.0
offset_bottom = -106.0
theme = ExtResource("3_nxo1i")

[node name="DeckCards" parent="." instance=ExtResource("3_xp2h7")]
position = Vector2(1282, 365)

[node name="CardsToDeal" parent="." instance=ExtResource("4_7iq34")]
position = Vector2(1346, 466)

[node name="CardsOnDeck" type="Node2D" parent="."]
position = Vector2(589, 463)
script = ExtResource("5_apm0q")
metadata/_edit_group_ = true

[node name="CardList" type="HBoxContainer" parent="CardsOnDeck"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -86.0
offset_top = -93.0
offset_right = 680.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)

[node name="Popup" type="Popup" parent="."]

[node name="Label" type="Label" parent="Popup"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Leaderboard" type="AcceptDialog" parent="."]
position = Vector2i(512, 300)
size = Vector2i(900, 500)

[node name="Label" type="Label" parent="Leaderboard"]
offset_left = 8.0
offset_top = 8.0
offset_right = 892.0
offset_bottom = 451.0
theme = SubResource("Theme_57vci")

[node name="OpsList" type="ItemList" parent="."]
offset_left = 461.0
offset_top = 128.0
offset_right = 703.0
offset_bottom = 248.0

[node name="RoomBetPool" type="Label" parent="."]
offset_left = 516.0
offset_top = 265.0
offset_right = 636.0
offset_bottom = 312.0
theme = ExtResource("3_nxo1i")

[connection signal="pressed" from="Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/CallButton" to="." method="_on_call_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/BetButton" to="." method="_on_bet_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/FoldButton" to="." method="_on_fold_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/RaiseButton" to="." method="_on_raise_button_pressed"]
[connection signal="pressed" from="Seats/Seat1/OptionContainer/All-InButton" to="." method="_on_all_in_button_pressed"]
[connection signal="text_changed" from="Seats/Seat1/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="text_submitted" from="Seats/Seat1/TextEdit" to="." method="_on_text_edit_text_submitted"]
